--- a/main.css
+++ b/main.css
@@ -27,10 +27,10 @@
     justify-content: center;
 }
 .logo-outer > img{
+    margin-left: 20px;
     height: 50px;
 }
 .nav-bar-context{
-    border: 1px solid red;
     flex:1;
     display: flex;
     align-items: center;
@@ -44,13 +44,13 @@
 .nav>li>span>a{
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 15px;
     text-transform: uppercase;
 }
 .nav>li{
     border-right: 1px solid white;
     border-bottom: 2px solid transparent;
-    padding: 5px 25px ;
+    padding: 5px 15px ;
 }
 .nav>li:last-child{
     border-right: 0;
@@ -62,5 +62,59 @@
 .nav>li:hover>span>a{
     color: #e79e79;
 }
+.book-button{
+    padding: 8px 15px;
+    background: none;
+    margin: 0 20px;
+    border-color: #e79e79;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.book-button:hover{
+    background-color: #e79e79;
+}
 /*nav*/
+/*Search style*/
+.search-wrapper{
+    width: 400px;
+    height: 40px;
+    margin-right: 10px;
+    background-color: white;
+    border-radius: 5px;
+    display: flex;
+}
+.search-type{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 13px;
+    width: 50px;
+    height: 100%;
+    background-color: lightgray;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+.search-wrapper>input[type = search]{
+    flex: 1;
+    background: none;
+    border: none;
+    padding: 0 15px;
+}
+.search-wrapper>input[type =search]:focus{
+    outline: none;
+}
+.search-icon{
+    width: 50px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e79e79;
+    color: white;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    cursor: pointer;
+}
+/*Search style*/
 /*nav style*/
