--- a/main.css
+++ b/main.css
@@ -5,6 +5,29 @@
     padding: 0;
     font-family: 'Oswald', sans-serif;
 }
+.body{
+    height: 5000px;
+}
+.body::-webkit-scrollbar{
+    width: 10px;
+}
+.body::-webkit-scrollbar-track{
+    background-color: #232F3E;
+}
+.body::-webkit-scrollbar-thumb{
+    background-color: #e79e79;
+    border-radius: 5px;
+}
+/*Social style*/
+.social-outer{
+    width: 50px;
+    height: 200px;
+    background-color: red;
+    position: fixed;
+    right: 0;
+    bottom: 150px;
+}
+/*Social style*/
 .main-slider-outer{
     width: 100%;
     height: 100vh;
@@ -18,6 +41,8 @@
     width: 100%;
     height: 80px;
     background-color: #0F172B;
+    position: fixed;
+    top: 0;
     display: flex;
 }
 .logo-outer{
@@ -79,7 +104,7 @@
 .search-wrapper{
     width: 400px;
     height: 40px;
-    margin-right: 10px;
+    margin-right: 25px;
     background-color: white;
     border-radius: 5px;
     display: flex;
