--- a/main.css
+++ b/main.css
@@ -22,10 +22,47 @@
 .social-outer{
     width: 50px;
     height: 200px;
-    background-color: red;
+    /*background-color: #e79e79;*/
     position: fixed;
     right: 0;
     bottom: 150px;
+    display: flex;
+    flex-direction: column;
+}
+.social-inner-wrap{
+    flex: 1;
+    /*border: 1px solid black;*/
+    position: relative;
+}
+.slide-context{
+    background-color: black;
+    width: 150px;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+
+    color: #e79e79;
+    font-size: 15px;
+    padding: 0 10px;
+}
+.social-inner-wrap:hover>.slide-context{
+    right: 50px;
+}
+.social-logo{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    z-index: 1;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social-logo:hover{
+    background-color: #e79e79;
+    color: white;
 }
 /*Social style*/
 .main-slider-outer{
@@ -73,9 +110,15 @@
     text-transform: uppercase;
 }
 .nav>li{
-    border-right: 1px solid white;
     border-bottom: 2px solid transparent;
-    padding: 5px 15px ;
+    display: flex;
+    align-items: center;
+}
+.line{
+    width: 2px;
+    height: 10px;
+    background-color: white;
+    margin: 0 20px;
 }
 .nav>li:last-child{
     border-right: 0;
