--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Oswald&family=Pacifico&display=swap');
+
 
 *{
     margin: 0;
@@ -28,6 +29,7 @@
     bottom: 150px;
     display: flex;
     flex-direction: column;
+    z-index: 10;
 }
 .social-inner-wrap{
     flex: 1;
@@ -72,6 +74,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 /*nav style*/
 .nav-outer{
@@ -81,6 +86,7 @@
     position: fixed;
     top: 0;
     display: flex;
+    z-index: 100;
 }
 .logo-outer{
     width: 200px;
@@ -185,4 +191,69 @@
     cursor: pointer;
 }
 /*Search style*/
+/*slider-middle-text style*/
+.middle-text-outer{
+    width: 100%;
+    height: 150px;
+    position: relative;
+}
+.book-today-text{
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    color: #00116c;
+    font-size: 55px;
+    font-weight: bolder;
+
+}
+.weekend-offer-text{
+    font-weight: bold;
+    text-align: center;
+    color: #e79e79;
+    font-size: 40px;
+}
+/*slider-middle-text style*/
+/*booking-widget-style*/
+.widget-main-outer{
+    width: 100%;
+    height: 70px;
+    margin-top: 50px;
+}
+.widget-inner{
+    width: 80%;
+    height: 100%;
+    background-color: white;
+    margin: 0 auto;
+    display: flex;
+}
+.widget-components-wrapper:first-child{
+    width: 40%;
+}
+.widget-components-wrapper{
+    height: 100%;
+    width: 20%;
+    display: flex;
+}
+.widget-components-wrapper>input[type=date],
+.widget-components-wrapper>select{
+    flex: 1;
+    padding: 0 20px;
+    font-size: 16px;
+    border: none;
+}
+.widget-components-wrapper>input[type=date]:focus,
+.widget-components-wrapper>select:focus{
+    outline: none;
+}
+.widget-components-wrapper>input[type=submit]{
+    flex: 1;
+    border: none;
+    background-color: #0F172B;
+    color: white;
+    font-size: 16px;
+}
+.widget-components-wrapper>input[type=submit]:hover{
+    background-color: #e79e79;
+    cursor: pointer;
+}
+/*booking-widget-style*/
 /*nav style*/
