Created selector options

--- a/main.css
+++ b/main.css
@@ -6,9 +6,7 @@
     padding: 0;
     font-family: 'Oswald', sans-serif;
 }
-.body{
-    height: 5000px;
-}
+
 .body::-webkit-scrollbar{
     width: 10px;
 }
@@ -257,3 +255,106 @@
 }
 /*booking-widget-style*/
 /*nav style*/
+/*about-styles*/
+.about-wrapper{
+    width: 100%;
+    height: 300px;
+    display: flex;
+}
+.about-inner{
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+.about-inner:first-child{
+    flex-direction: column;
+    position: relative;
+    justify-content: center;
+}
+.about-inner>p{
+    font-size: 16px;
+    color: darkgray;
+    font-family: 'Roboto Light', sans-serif;
+    padding: 0 20px;
+    line-height: 30px;
+    text-align: justify;
+}
+.welcome-text{
+    color: #e79e79;
+    font-size: 80px;
+    text-align: center;
+    width: 100%;
+    font-family: 'Dancing Script', cursive;
+}
+.enjoy-text{
+    font-size: 35px;
+    font-weight: bold;
+    font-family: 'Roboto Light',sans-serif;
+    text-align: center;
+    width: 100%;
+    margin-top: -40px;
+}
+/*about-styles*/
+/*services-area-styles*/
+.services-main-outer{
+    width: 100%;
+    height: 500px;
+    /*border: 1px solid red;*/
+    display: flex;
+}
+.service-inner{
+    flex: 1;
+    /*border: 1px solid red;*/
+    transition: 0.5s ease-in-out;
+}
+.service-inner:hover{
+    cursor: pointer;
+    margin-top: -40px;
+}
+.service-inner:first-child{
+    background-image: url("https://img.freepik.com/free-photo/cup-coffee-breakfast_1339-7332.jpg?w=740&t=st=1693675719~exp=1693676319~hmac=8e3e8aba3aa4d6382d0dacb4b0151e07f4fe568f55c04efb004201daf808a032");
+    background-size: cover;
+    background-position-x: -300px;
+}
+.service-inner:nth-child(2){
+    background-image: url("https://img.freepik.com/free-photo/relaxing-woman-sitting-comfortable-sofa-lounge-chair-home_231208-588.jpg?w=740&t=st=1693675820~exp=1693676420~hmac=4aefc9560428f04cc6078032b89eab83e9163a77e345708a548f5acd3c86f98c");
+    background-size: cover;
+    background-position-x: -300px;
+}
+.service-inner:nth-child(3){
+    background-image: url("https://img.freepik.com/free-photo/portrait-beautiful-young-asian-woman-happy-smile-relax-around-neary-beach-sea_74190-8155.jpg?w=740&t=st=1693675997~exp=1693676597~hmac=3b1c0b69fb165c27dfb5f5eb08a120fb661611860cee025d545ec59825bffa8b");
+    background-size: cover;
+    background-position-x: -300px;
+}
+.service-inner:last-child{
+    background-image: url("https://img.freepik.com/free-photo/christmas-table-served-with-turkey-decorated-with-bright-tinsel-candles_2829-18808.jpg?w=740&t=st=1693676139~exp=1693676739~hmac=d7bde377e96f1b468d3f78a10d1605e615b800458013886b20e072685054c1aa");
+    background-size: cover;
+    background-position-x: -300px;
+}
+.shadow-wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    background-color: rgba(15, 23, 43, 0.5);
+}
+.show-wrapper{
+    width: 100%;
+    min-height: 200px;
+    height: auto;
+    background-color: red;
+}
+.hidden-wrapper{
+    width: 100%;
+    min-height: 200px;
+    height: auto;
+    background-color: blue;
+    display: none;
+}
+.service-inner:hover>.shadow-wrapper>.show-wrapper{
+    display: none;
+}
+.service-inner:hover>.shadow-wrapper>.hidden-wrapper{
+    display: block;
+}
+/*services-area-styles*/
