--- a/main.css
+++ b/main.css
@@ -382,3 +382,24 @@
     padding: 0 20px;
 }
 /*services-area-styles*/
+/*blog-styles*/
+.blog-outer{
+    width: 100%;
+    height: 500px;
+    /*border: 1px solid red;*/
+    margin: 50px 0;
+}
+.blog-inner{
+    width: 80%;
+    height: 100%;
+    /*border: 1px solid red;*/
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.blog-items-wrapper{
+    width: 30%;
+    height: 100%;
+    border: 1px solid red;
+}
+/*blog-styles*/
