--- a/main.css
+++ b/main.css
@@ -428,3 +428,158 @@
     padding: 0 20px;
 }
 /*blog-styles*/
+/*footer-set-styles*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+
+footer {
+    color: #ffffff;
+    background-color: #0F172B;
+    /*position: fixed;*/
+    bottom: 0;
+}
+
+.row {
+    display: flex;
+    padding: 1rem;
+}
+
+.column {
+    width: calc(100% / 3);
+    padding: 0 0.9375rem;
+}
+
+h4 {
+    margin-bottom: 0.9375rem;
+    font-size: 1.5rem;
+}
+
+p {
+    font-size: 1rem;
+    line-height: 1.3rem;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+ul li {
+    margin-bottom: 0.625rem;
+}
+
+ul li a {
+    color: #ffffff;
+    font-size: 1rem;
+    transition: 0.3s all ease;
+}
+
+ul li i {
+    color: #e79e79;
+}
+
+ul li a:hover {
+    color: #e79e79;
+    margin-left: 0.2rem;
+}
+
+ul.social-icons {
+    display: flex;
+    column-gap: 0.625rem;
+}
+
+.social-icons i {
+    color: #e79e79;
+}
+
+ul.social-icons li {
+    margin-bottom: 0rem;
+}
+
+ul.social-icons li a {
+    display: grid;
+    place-content: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 100%;
+    border: 1.5px solid #e79e79;
+}
+
+ul.social-icons li:hover a {
+    background-color: #e79e79;
+    animation: shake 0.3s ease;
+    margin-left: 0;
+}
+
+ul.social-icons li:hover i {
+    color: #fff;
+}
+
+.copyright {
+    text-align: center;
+    color: #fff;
+    background-color: #0F172B;
+    padding: 0.6rem 0;
+}
+
+/* Shake animation */
+@keyframes shake {
+    from,
+    to {
+        transform: scale(1, 1);
+    }
+    25% {
+        transform: scale(0.9, 1.1);
+    }
+    50% {
+        transform: scale(1.1, 0.9);
+    }
+    75% {
+        transform: scale(0.95, 1.05);
+    }
+}
+
+
+/* Responsive adjustments for mobile version */
+@media screen and (max-width: 768px) {
+    .column {
+        margin: 0.4rem 0;
+        width: 100%;
+        padding: 0;
+    }
+
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    h4 {
+        font-size: 1.3125rem;
+    }
+
+    p {
+        font-size: 0.9375rem;
+    }
+
+    ul li a {
+        font-size: 0.9375rem;
+    }
+
+    ul.social-icons li a {
+        width: 1.975rem;
+        height: 1.975rem;
+    }
+}
+
+/*footer-set-styles*/
